vendor/charmed_rust/crates/bubbletea-macros/tests/ui/fail/enum_not_supported.stderr
error: #[derive(Model)] can only be applied to a struct, found enum

       help: Apply #[derive(Model)] to a struct instead.
  --> tests/ui/fail/enum_not_supported.rs:17:6
   |
17 | enum NotAStruct {
   |      ^^^^^^^^^^
